@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.11.0 ChangeLog</title>
+		<title>Version 4.11.2 ChangeLog</title>
 		<style type="text/css">
 .auto-style1 {
 	text-decoration: underline;
@@ -10,7 +10,12 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.11.0</span>
+            <br /><span class="auto-style1">Pulse-4.11.2</span>
+            <br />  Pulse-4.11.2
+            <br />  * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
+            <br />  * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
+            <br />  * Fixed bug in DecodeCSHOW with DecodeCBI() and added the interleave flag.
+            <br />
             <br />  Pulse-4.11.1
             <br />  * Update the prediction model.
             <br />  * Changed DilutionOfPrecision to not throw an exception but pass NaN.
