@@ -1,5 +1,10 @@
 ﻿Pulse Changelog
 
+Pulse-4.11.2
+ * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
+ * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
+ * Fixed bug in DecodeCSHOW with DecodeCBI() and added the interleave flag.
+
 Pulse-4.11.1
  * Updated Prediction Model System Init Time.
 
